--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.3"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.11.3",
+    "axios": "^1.7.2",
+    "tailwindcss": "^3.4.4"
   }
 }
