--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.3",
     "axios": "^1.7.2",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "toastify-js": "^1.12.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0"
   }
 }
