--- a/package.json
+++ b/package.json
@@ -5,18 +5,32 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "build": "./build.sh && astro build && ./dev.sh",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@11ty/eleventy-fetch": "^4.0.1",
+    "@astrojs/react": "^3.6.0",
+    "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@capacitor/android": "^6.1.0",
+    "@capacitor/core": "^6.1.0",
+    "@capacitor/ios": "^6.1.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
+    "astro-php": "^0.0.1",
     "axios": "^1.7.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
     "toastify-js": "^1.12.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.1.0",
+    "@types/node": "^20.14.9",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0"
   }
