Aplicación mapas creada

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,13 @@
 {
   "appId": "com.estudiolucmar.app",
   "appName": "LucmarCloud",
-  "webDir": "dist"
+  "webDir": "dist",
+  "server": {
+    "url": "https://estudiolucmar.com",
+    "cleartext": false,
+    "allowNavigation": [
+      "estudiolucmar.com",
+      "*.estudiolucmar.com"
+    ]
+  }
 }
