--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
     "@astrojs/tailwind": "^5.1.0",
     "@capacitor/android": "^6.1.0",
     "@capacitor/core": "^6.1.0",
-    "@capacitor/ios": "^6.1.0",
+    "@capacitor/ios": "6.1.0",
+    "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "astro": "^4.11.3",
     "astro-php": "^0.0.1",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "fs": "^0.0.1-security",
+    "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
+    "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-draw": "^0.20.4",
+    "reactstrap": "^9.2.2",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
-    "toastify-js": "^1.12.0"
+    "toastify-js": "^1.12.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
