--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet-geosearch": "^4.0.0",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
+    "react-leaflet-search": "^2.0.1",
     "reactstrap": "^9.2.2",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
