--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "leaflet-geosearch": "^4.0.0",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
