cambios en app de ios

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.6.0",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@capacitor-community/safe-area": "^6.0.0-alpha.6",
     "@capacitor/android": "^6.1.0",
     "@capacitor/core": "^6.1.0",
     "@capacitor/ios": "6.1.0",
@@ -24,6 +25,7 @@
     "astro-php": "^0.0.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "capacitor-plugin-safe-area": "^3.0.3",
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
