--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,6 +2,17 @@
   "appId": "com.estudiolucmar.app",
   "appName": "LucmarCloud",
   "webDir": "dist",
+  "plugins": {
+    "SafeArea": {
+      "enabled": true,
+      "customColorsForSystemBars": true,
+      "statusBarColor": "#000000",
+      "statusBarContent": "light",
+      "navigationBarColor": "#000000",
+      "navigationBarContent": "light",
+      "offset": 0
+    }
+  },
   "server": {
     "url": "https://estudiolucmar.com",
     "cleartext": false,
