--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "capacitor-plugin-safe-area": "^3.0.3",
     "fs": "^0.0.1-security",
+    "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-geosearch": "^4.0.0",
@@ -37,6 +38,9 @@
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-search": "^2.0.1",
+    "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
