--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@capacitor/android": "^6.1.0",
     "@capacitor/core": "^6.1.0",
     "@capacitor/ios": "6.1.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -40,6 +44,7 @@
     "react-leaflet-search": "^2.0.1",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
+    "react-slider": "^2.0.6",
     "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "solid-js": "^1.8.18",
