--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
     "react-leaflet-search": "^2.0.1",
