--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-geosearch": "^4.0.0",
+    "moment": "^2.30.1",
     "mysql": "^2.18.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
