--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "preinstall": "npm install --force",
+    "preinstall": "npm install --legacy-peer-deps",
     "build": "./build.sh && astro build && ./dev.sh",
     "preview": "astro preview",
     "astro": "astro"
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@supabase/supabase-js": "^2.44.4",
     "@tomtom-international/web-sdk-maps": "^6.25.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -31,6 +32,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "capacitor-plugin-safe-area": "^3.0.3",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
