--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-draw": "^0.20.4",
-    "react-leaflet-search": "^2.0.1",
+    "react-leaflet-search": "https://github.com/jaivial/react-leaflet-search",
     "react-modal": "^3.16.1",
     "react-select": "^5.8.0",
     "react-slider": "^2.0.6",
