--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "estudiolucarastro",
   "type": "module",
   "version": "0.0.1",
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "browser": true
+    }
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -33,6 +39,7 @@
     "capacitor-plugin-safe-area": "^3.0.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
     "keen-slider": "^6.8.6",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
@@ -59,7 +66,10 @@
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
+    "@eslint/js": "^9.8.0",
     "@types/node": "^20.14.9",
+    "eslint": "^9.8.0",
+    "globals": "^15.8.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0"
   }
