--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   },
   "dependencies": {
     "@11ty/eleventy-fetch": "^4.0.1",
+    "@astrojs/node": "^8.3.2",
     "@astrojs/react": "^3.6.0",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.25.0",
+    "@babel/preset-react": "^7.24.7",
     "@capacitor-community/safe-area": "^6.0.0-alpha.6",
     "@capacitor/android": "^6.1.0",
     "@capacitor/core": "^6.1.0",
@@ -35,6 +39,7 @@
     "astro": "^4.11.3",
     "astro-php": "^0.0.1",
     "axios": "^1.7.2",
+    "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
     "capacitor-plugin-safe-area": "^3.0.3",
     "dotenv": "^16.4.5",
@@ -62,7 +67,9 @@
     "solid-js": "^1.8.18",
     "tailwindcss": "^3.4.4",
     "toastify-js": "^1.12.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
     "@capacitor/cli": "^6.1.0",
@@ -71,6 +78,7 @@
     "eslint": "^9.8.0",
     "globals": "^15.8.0",
     "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0"
+    "prettier-plugin-astro": "^0.14.0",
+    "process": "^0.11.10"
   }
 }
